--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,13 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
 frontend/node_modules
 frontend/.pnp
 frontend/.pnp.js
 
 # testing
-frontend//coverage
+frontend/coverage
 
 # production
-frontend//build
+frontend/build
 
 # misc
 frontend/.DS_Store
@@ -18,6 +16,23 @@ frontend/.env.development.local
 frontend/.env.test.local
 frontend/.env.production.local
 
+backend/.DS_Store
+backend/.env.local
+backend/.env.development.local
+backend/.env.test.local
+backend/.env.production.local
+
 frontend/npm-debug.log*
 frontend/yarn-debug.log*
 frontend/yarn-error.log*
+
+backend/env
+
+# Docker
+Dockerfile
+.dockerignore
+docker-compose.yml
+.env
+
+.mypy_cache
+.vscode
